cmake_minimum_required(VERSION 3.12)
project(Midtermprac)

set(CMAKE_CXX_STANDARD 14)

add_executable(Midtermprac main.cpp)
add_executable(DoubleLLtemplated DoubleLLtemplated.cpp)
add_executable(stack stack.cpp)
add_executable(LLprac LLprac.cpp)
add_executable(HW HW.cpp)
add_executable(fibo fibo.cpp)
add_executable(gcd gcd.cpp)
add_executable(ES ES.cpp)
add_executable(insertionsort insertionsort.cpp)
add_executable(merge merge.cpp)
add_executable(heap heap.cpp)
add_executable(shuffle shuffle.cpp)
add_executable(binarysearch binarysearch.cpp)
add_executable(bisection bisection.cpp)
add_executable(LLhnp LLhnp.cpp)
add_executable(linkedlist linkedlist.cpp)